--- a/components/graphs/graphs.module.css
+++ b/components/graphs/graphs.module.css
@@ -1,7 +1,6 @@
 .hr {
   margin: var(--gap-double) 0;
-  height: 0;
-  border-top: 1px solid var(--light-gray);
+  border-top: 1px solid var(--lighter-gray);
 }
 
 .graphWrapper {
